# mtemu

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build  org.bmstu.mtemu.json
data/: meson.build  org.bmstu.mtemu.desktop.in  org.bmstu.mtemu.gschema.xml  org.bmstu.mtemu.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
scripts/: setup-buildenv.ps1  windows-package.sh
src/: application.rs  config.rs  main.rs  meson.build  mtemu.gresource.xml  utils.rs
src/emulator/: meson.build  mod.rs
src/emulator/implementation/: Call.cs  Command.cs  Eggs.cs  Emulator.cs  Helpers.cs  PortExtender.cs  Statics.cs  config.h  config.h.in  emulator_shim.c  emulator_shim.h  meson.build  shim_experiments.c
src/ui/: mod.rs  window.rs  window.ui
src/ui/code_view_pane/: editor.rs  editor.ui  mod.rs  pane.ui
src/ui/command_view/: mod.rs  window.ui
src/ui/debug_pane/: mod.rs  output_view.rs  output_view.ui  pane.ui  register_view.rs  register_view.ui  stepping_view.rs  stepping_view.ui
src/ui/line_builder_pane/: instr_table_entries.json  interface_type_table_entries.json  jump_table_entries.json  load_type_table_entries.json  mod.rs  models.rs  operand_type_table_entries.json  pane.ui  pointer_size_table_entries.json  pointer_type_table_entries.json
src/ui/memory_view/: mod.rs  window.ui
src/ui/stack_view/: mod.rs  window.ui
wix-bundle/: mtemu.wxs
